# JourneyToLove

./: .gitignore  README.md
JourneyToLove/: CMakeLists.txt  resources.rc
JourneyToLove/assets/: level.csv
JourneyToLove/src/: main.cpp
JourneyToLove/src/core/: Button.cpp  Button.h  CSVReader.cpp  CSVReader.h  GameObject.cpp  GameObject.h  GameSetting.cpp  GameSetting.h  Renderer.cpp  Renderer.h
JourneyToLove/src/game/: CollisionUtils.cpp  CollisionUtils.h  Level.cpp  Level.h  Player.cpp  Player.h  Scene.cpp  Scene.h  UIController.cpp  UIController.h
